# autooutlier

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml
autooutlier/: __init__.py  detection.py  handling.py  statistics.py  summary.py  utils.py  version.py
docs/: api_reference.md  changelog.md  detection_methods.md  examples.md  faq.md  handling_methods.md  index.md  installation.md  quickstart.md  user_guide.md
examples/: basic_usage.py
tests/: test_detection.py  test_handling.py  test_statistics.py  test_summary.py
